# council

./: .gitignore  LICENSE  PAPER.md  README.md  SOUL.md  c  publish  pyproject.toml
.github/workflows/: pages.yml
council/: __init__.py  bridge.py  cli.py  config.py  display.py  eval.py  mcp_server.py  memory.py  pipeline.py  prompts.py  publish.py  web.py  web_ui.html
docs/: _config.yml  about.md  index.md
docs/_layouts/: default.html  session.html
docs/_sessions/: 2026-04-06-council-brief-agi-development-pace-accelerate-vs-decelerate.md  2026-04-07-error-reached-max-turns-10.md
tests/: conftest.py  test_bridge.py  test_config.py  test_display.py  test_memory.py  test_pipeline.py  test_prompts.py
