[project]
name = "council"
version = "0.1.0"
description = "Council of LLM CLIs — query multiple AI coding agents and synthesize bias-free answers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
council = "council.cli:run"

[tool.setuptools.packages.find]
include = ["council*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
